--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
-<link rel="stylesheet" type="text/css" href="./bower_components/normalize.css/normalize.css">
-<link rel="stylesheet" type="text/css" href="./bower_components/typeplate-starter-kit/css/typeplate.css">
-<script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="./bower_components/lodash/dist/lodash.min.js"></script>
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="./bower_components/normalize.css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="./bower_components/typeplate-starter-kit/css/typeplate.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
+</head>
+<body>
+	<div class="main_grid">
+	<div class="left-column"></div>
+	</div>
+
+
+
+	    <script type="text/javascript" src="./bower_components/Loader/loader.js" id="loaderjs" data-app="./js/app.js"></script>
+</body>
+</html>
