--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="./bower_components/normalize.css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="./bower_components/typeplate-starter-kit/css/typeplate.css">
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./dist/style.css">
 </head>
 <body>
-	<div class="main_grid">
-	<div class="left-column"></div>
+	<div class="main" id="listings">
 	</div>
-
-
-
 	    <script type="text/javascript" src="./bower_components/Loader/loader.js" id="loaderjs" data-app="./js/app.js"></script>
 </body>
 </html>
